--- a/v2.html
+++ b/v2.html
@@ -2,29 +2,34 @@
 <html lang="bn">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>লোডশেডিং রিকভারি - Ultra Advanced</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<title>লোডশেডিং রিকভারি - Ultra Mobile Friendly</title>
 <style>
   body, html { margin:0; padding:0; height:100%; font-family:sans-serif; background:#071126; overflow:hidden; }
-  .container { display:flex; height:100%; width:100%; }
-  .sidebar { width:280px; background:rgba(0,0,0,0.3); border-right:2px solid #0ff; padding:10px; box-sizing:border-box; display:flex; flex-direction:column; gap:10px; }
-  .sidebar button { padding:10px; border:none; border-radius:8px; cursor:pointer; font-weight:bold; background:#0ff; color:#000; transition:0.2s; }
+  .container { display:flex; flex-direction:row; height:100%; width:100%; }
+  .sidebar { width:250px; background:rgba(0,0,0,0.3); border-right:2px solid #0ff; padding:10px; box-sizing:border-box; display:flex; flex-direction:column; gap:10px; flex-shrink:0; }
+  .sidebar button { padding:12px; border:none; border-radius:8px; cursor:pointer; font-weight:bold; background:#0ff; color:#000; transition:0.2s; font-size:16px; }
   .sidebar button:hover { transform:scale(1.05); box-shadow:0 0 15px #0ff; }
-  .game-area { flex:1; position:relative; overflow:hidden; }
+  .game-area { flex:1; position:relative; overflow:hidden; touch-action:none; }
   .target { position:absolute; background-size:contain; background-repeat:no-repeat; cursor:pointer; transition: transform 0.3s, opacity 0.5s; }
-  #fuse { width:120px; height:180px; left:6%; top:24%; background-image:url('assets/fuse_box.png'); }
-  #cat { width:120px; height:120px; left:40%; top:38%; background-image:url('assets/cat.png'); opacity:0; }
-  #meter { width:150px; height:150px; left:68%; top:56%; background-image:url('assets/meter_box.png'); opacity:0; }
-  #pole { width:120px; height:220px; left:46%; top:8%; background-image:url('assets/pole.png'); opacity:0; }
+  #fuse { width:100px; height:150px; left:5%; top:20%; background-image:url('assets/fuse_box.png'); }
+  #cat { width:100px; height:100px; left:35%; top:35%; background-image:url('assets/cat.png'); opacity:0; }
+  #meter { width:120px; height:120px; left:65%; top:55%; background-image:url('assets/meter_box.png'); opacity:0; }
+  #pole { width:100px; height:180px; left:45%; top:10%; background-image:url('assets/pole.png'); opacity:0; }
   #flash { position:absolute; inset:0; z-index:30; pointer-events:auto; transition: background 0.1s; }
   canvas { position:absolute; inset:0; z-index:20; pointer-events:none; }
-  .hint { position:absolute; bottom:20px; left:50%; transform:translateX(-50%); background:rgba(0,0,0,0.5); color:#0ff; padding:8px 16px; border-radius:20px; font-size:14px; border:1px solid #0ff; z-index:40; }
+  .hint { position:absolute; bottom:15px; left:50%; transform:translateX(-50%); background:rgba(0,0,0,0.5); color:#0ff; padding:8px 16px; border-radius:20px; font-size:14px; border:1px solid #0ff; z-index:40; }
   .overlay { position:absolute; inset:0; background:rgba(0,0,0,0.85); display:flex; justify-content:center; align-items:center; z-index:50; }
   .overlay-box { background:linear-gradient(to bottom,#00131a,#001b22); padding:20px; border-radius:16px; text-align:center; border:2px solid #0ff; max-width:400px; }
   .overlay-box h2 { color:#0ff; font-size:24px; margin-bottom:10px; }
-  .overlay-box p { color:#fff; margin-bottom:15px; }
-  .overlay-box button { margin:5px; padding:10px 15px; border:none; border-radius:6px; cursor:pointer; font-weight:bold; background:#0ff; color:#000; transition:0.2s; }
+  .overlay-box p { color:#fff; margin-bottom:15px; font-size:16px; }
+  .overlay-box button { margin:5px; padding:10px 15px; border:none; border-radius:6px; cursor:pointer; font-weight:bold; background:#0ff; color:#000; transition:0.2s; font-size:16px; }
   .overlay-box button:hover { transform:scale(1.05); box-shadow:0 0 15px #0ff; }
+  @media(max-width:768px){
+    .container { flex-direction:column; }
+    .sidebar { width:100%; flex-direction:row; flex-wrap:wrap; justify-content:center; border-right:none; border-bottom:2px solid #0ff; }
+    .sidebar button { flex:1 1 45%; margin:4px; }
+  }
 </style>
 </head>
 <body>
@@ -86,13 +91,12 @@ let ambient = new Audio('assets/mission_loop.mp3'); ambient.loop=true;
 function resizeCanvas(){ particlesCanvas.width=gameArea.clientWidth; particlesCanvas.height=gameArea.clientHeight; }
 window.addEventListener('resize',resizeCanvas); resizeCanvas();
 
-// flashlight follow
-gameArea.addEventListener('mousemove',(e)=>{
-  const rect = flash.getBoundingClientRect();
-  const x = e.clientX - rect.left;
-  const y = e.clientY - rect.top;
+// flashlight follow (mouse + touch)
+function updateFlash(x,y){
   flash.style.background=`radial-gradient(circle 160px at ${x}px ${y}px, rgba(255,255,230,0.95), rgba(0,0,0,0) 40%), radial-gradient(circle 360px at ${x}px ${y}px, rgba(255,255,255,0.04), rgba(0,0,0,0.92) 60%)`;
-});
+}
+gameArea.addEventListener('mousemove',(e)=>{ updateFlash(e.offsetX,e.offsetY); });
+gameArea.addEventListener('touchmove',(e)=>{ e.preventDefault(); const t=e.touches[0]; const rect=gameArea.getBoundingClientRect(); updateFlash(t.clientX-rect.left,t.clientY-rect.top); },{passive:false});
 
 // particles
 function spawnSparks(x,y,n=12){
@@ -150,6 +154,13 @@ function clickTarget(id,nextStep,hintText,sparks){
     spawnSparks(e.clientX,e.clientY,sparks);
     found[id]=true; step=nextStep; typeHint(hintText); fadeInTargets();
   });
+  el.addEventListener('touchstart',(e)=>{
+    if(step!==nextStep-1) return;
+    const t=e.touches[0]; const rect=el.getBoundingClientRect();
+    spawnSparks(t.clientX,t.clientY,sparks);
+    found[id]=true; step=nextStep; typeHint(hintText); fadeInTargets();
+    e.preventDefault();
+  },{passive:false});
 }
 
 clickTarget('fuse',1.5,'ফিউজ পাওয়া গেছে — বিড়াল সরান',20);
