--- a/index.html
+++ b/index.html
@@ -2,29 +2,34 @@
 <html lang="bn">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>লোডশেডিং রিকভারি - Fixed Version</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<title>লোডশেডিং রিকভারি - Ultra Mobile Friendly</title>
 <style>
   body, html { margin:0; padding:0; height:100%; font-family:sans-serif; background:#071126; overflow:hidden; }
-  .container { display:flex; height:100%; width:100%; }
-  .sidebar { width:280px; background:rgba(0,0,0,0.3); border-right:2px solid #0ff; padding:10px; box-sizing:border-box; display:flex; flex-direction:column; gap:10px; }
-  .sidebar button { padding:10px; border:none; border-radius:6px; cursor:pointer; font-weight:bold; background:#0ff; color:#000; transition:0.2s; }
+  .container { display:flex; flex-direction:row; height:100%; width:100%; }
+  .sidebar { width:250px; background:rgba(0,0,0,0.3); border-right:2px solid #0ff; padding:10px; box-sizing:border-box; display:flex; flex-direction:column; gap:10px; flex-shrink:0; }
+  .sidebar button { padding:12px; border:none; border-radius:8px; cursor:pointer; font-weight:bold; background:#0ff; color:#000; transition:0.2s; font-size:16px; }
   .sidebar button:hover { transform:scale(1.05); box-shadow:0 0 15px #0ff; }
-  .game-area { flex:1; position:relative; overflow:hidden; }
-  .target { position:absolute; background-size:contain; background-repeat:no-repeat; cursor:pointer; }
-  #fuse { width:120px; height:180px; left:6%; top:24%; background-image:url('assets/fuse_box.png'); }
-  #cat { width:120px; height:120px; left:40%; top:38%; background-image:url('assets/cat.png'); display:none; }
-  #meter { width:150px; height:150px; left:68%; top:56%; background-image:url('assets/meter_box.png'); display:none; }
-  #pole { width:120px; height:220px; left:46%; top:8%; background-image:url('assets/pole.png'); display:none; }
-  #flash { position:absolute; inset:0; z-index:30; pointer-events:auto; }
+  .game-area { flex:1; position:relative; overflow:hidden; touch-action:none; }
+  .target { position:absolute; background-size:contain; background-repeat:no-repeat; cursor:pointer; transition: transform 0.3s, opacity 0.5s; }
+  #fuse { width:100px; height:150px; left:5%; top:20%; background-image:url('assets/fuse_box.png'); }
+  #cat { width:100px; height:100px; left:35%; top:35%; background-image:url('assets/cat.png'); opacity:0; }
+  #meter { width:120px; height:120px; left:65%; top:55%; background-image:url('assets/meter_box.png'); opacity:0; }
+  #pole { width:100px; height:180px; left:45%; top:10%; background-image:url('assets/pole.png'); opacity:0; }
+  #flash { position:absolute; inset:0; z-index:30; pointer-events:auto; transition: background 0.1s; }
   canvas { position:absolute; inset:0; z-index:20; pointer-events:none; }
-  .hint { position:absolute; bottom:20px; left:50%; transform:translateX(-50%); background:rgba(0,0,0,0.5); color:#0ff; padding:8px 16px; border-radius:20px; font-size:14px; border:1px solid #0ff; z-index:40; }
-  .overlay { position:absolute; inset:0; background:rgba(0,0,0,0.8); display:flex; justify-content:center; align-items:center; z-index:50; }
+  .hint { position:absolute; bottom:15px; left:50%; transform:translateX(-50%); background:rgba(0,0,0,0.5); color:#0ff; padding:8px 16px; border-radius:20px; font-size:14px; border:1px solid #0ff; z-index:40; }
+  .overlay { position:absolute; inset:0; background:rgba(0,0,0,0.85); display:flex; justify-content:center; align-items:center; z-index:50; }
   .overlay-box { background:linear-gradient(to bottom,#00131a,#001b22); padding:20px; border-radius:16px; text-align:center; border:2px solid #0ff; max-width:400px; }
   .overlay-box h2 { color:#0ff; font-size:24px; margin-bottom:10px; }
-  .overlay-box p { color:#fff; margin-bottom:15px; }
-  .overlay-box button { margin:5px; padding:10px 15px; border:none; border-radius:6px; cursor:pointer; font-weight:bold; background:#0ff; color:#000; transition:0.2s; }
+  .overlay-box p { color:#fff; margin-bottom:15px; font-size:16px; }
+  .overlay-box button { margin:5px; padding:10px 15px; border:none; border-radius:6px; cursor:pointer; font-weight:bold; background:#0ff; color:#000; transition:0.2s; font-size:16px; }
   .overlay-box button:hover { transform:scale(1.05); box-shadow:0 0 15px #0ff; }
+  @media(max-width:768px){
+    .container { flex-direction:column; }
+    .sidebar { width:100%; flex-direction:row; flex-wrap:wrap; justify-content:center; border-right:none; border-bottom:2px solid #0ff; }
+    .sidebar button { flex:1 1 45%; margin:4px; }
+  }
 </style>
 </head>
 <body>
@@ -62,44 +67,38 @@
 
 <script>
 const startBtn = document.getElementById('startBtn');
-const overlayStart = document.getElementById('overlayStart');
 const saveBtn = document.getElementById('saveBtn');
 const loadBtn = document.getElementById('loadBtn');
 const resetBtn = document.getElementById('resetBtn');
 const soundBtn = document.getElementById('soundBtn');
 const creditsBtn = document.getElementById('creditsBtn');
 const overlay = document.getElementById('overlay');
+const overlayStart = document.getElementById('overlayStart');
 const hint = document.getElementById('hint');
 const gameArea = document.getElementById('gameArea');
 const flash = document.getElementById('flash');
 const particlesCanvas = document.getElementById('particles');
 const ctx = particlesCanvas.getContext('2d');
+
 let raf;
-
-// Game state
-let running=false, step=0, soundsOn=true;
-let found={fuse:false,cat:false,meter:false,pole:false};
-let particleStore=[];
-
-// Ambient music
+let soundsOn = true, running = false;
+let mood = 6, timer=90, step=0;
+let found = { fuse:false, cat:false, meter:false, pole:false };
+let particleStore = [];
 let ambient = new Audio('assets/mission_loop.mp3'); ambient.loop=true;
 
-// Resize canvas
+// resize canvas
 function resizeCanvas(){ particlesCanvas.width=gameArea.clientWidth; particlesCanvas.height=gameArea.clientHeight; }
 window.addEventListener('resize',resizeCanvas); resizeCanvas();
 
-// Hint function
-function typeHint(msg, ms=2500){ hint.textContent=msg; setTimeout(()=>{ hint.textContent='মাউস/আঙুল দ্বারা ফ্ল্যাশলাইট নিয়ন্ত্রণ করুন'; }, ms); }
+// flashlight follow (mouse + touch)
+function updateFlash(x,y){
+  flash.style.background=`radial-gradient(circle 160px at ${x}px ${y}px, rgba(255,255,230,0.95), rgba(0,0,0,0) 40%), radial-gradient(circle 360px at ${x}px ${y}px, rgba(255,255,255,0.04), rgba(0,0,0,0.92) 60%)`;
+}
+gameArea.addEventListener('mousemove',(e)=>{ updateFlash(e.offsetX,e.offsetY); });
+gameArea.addEventListener('touchmove',(e)=>{ e.preventDefault(); const t=e.touches[0]; const rect=gameArea.getBoundingClientRect(); updateFlash(t.clientX-rect.left,t.clientY-rect.top); },{passive:false});
 
-// Flashlight
-gameArea.addEventListener('mousemove',(e)=>{
-  flash.style.background=`radial-gradient(circle 160px at ${e.offsetX}px ${e.offsetY}px, rgba(255,255,230,0.95), rgba(0,0,0,0) 40%), radial-gradient(circle 360px at ${e.offsetX}px ${e.offsetY}px, rgba(255,255,255,0.04), rgba(0,0,0,0.92) 60%)`;
-});
-gameArea.addEventListener('touchmove',(e)=>{
-  flash.style.background=`radial-gradient(circle 160px at ${e.touches[0].clientX}px ${e.touches[0].clientY}px, rgba(255,255,230,0.95), rgba(0,0,0,0) 40%), radial-gradient(circle 360px at ${e.touches[0].clientX}px ${e.touches[0].clientY}px, rgba(255,255,255,0.04), rgba(0,0,0,0.92) 60%)`;
-});
-
-// Particles
+// particles
 function spawnSparks(x,y,n=12){
   for(let i=0;i<n;i++){
     particleStore.push({x,y,vx:(Math.random()-0.5)*3,vy:(Math.random()-1.8)*3,life:30+Math.random()*30,size:1+Math.random()*2,color:`rgba(255,${150+Math.floor(Math.random()*100)},0,1)`});
@@ -118,21 +117,26 @@ function tickParticles(){
 }
 tickParticles();
 
-// Update object visibility based on step
-function updateVisibility(){
-  document.getElementById('fuse').style.display = step>=1 ? 'block' : 'block';
-  document.getElementById('cat').style.display = step>=1.5 ? 'block' : 'none';
-  document.getElementById('meter').style.display = step>=2 ? 'block' : 'none';
-  document.getElementById('pole').style.display = step>=3 ? 'block' : 'none';
-}
+// hint
+function typeHint(t,ms=2500){ hint.textContent=t; setTimeout(()=>{ hint.textContent='মাউস/আঙুল দ্বারা ফ্ল্যাশলাইট নিয়ন্ত্রণ করুন'; },ms); }
 
-// Button actions
-function startGame(){ overlay.style.display='none'; running=true; step=1; typeHint('লোডশেডিং হয়েছে — ফিউজ খুঁজুন!'); if(soundsOn) ambient.play().catch(()=>{}); updateVisibility(); }
-function saveGame(){ localStorage.setItem('ls_save',JSON.stringify({step,found})); typeHint('সেভ করা হয়েছে'); }
-function loadGame(){ const raw=localStorage.getItem('ls_save'); if(!raw){typeHint('কোনো সেভ পাওয়া যায়নি'); return;} const s=JSON.parse(raw); step=s.step||1; found=s.found||found; typeHint('সেভ লোড হয়েছে'); updateVisibility(); }
+// button actions
+function startGame(){ overlay.style.display='none'; running=true; step=1; typeHint('লোডশেডিং হয়েছে — ফিউজ খুঁজুন!'); if(soundsOn) ambient.play().catch(()=>{}); fadeInTargets(); }
+function saveGame(){ localStorage.setItem('ls_save',JSON.stringify({step,mood,timer,found})); typeHint('সেভ করা হয়েছে'); }
+function loadGame(){ const raw=localStorage.getItem('ls_save'); if(!raw){typeHint('কোনো সেভ পাওয়া যায়নি'); return;} const s=JSON.parse(raw); step=s.step||0; mood=s.mood||0; timer=s.timer||90; found=s.found||found; typeHint('সেভ লোড হয়েছে'); fadeInTargets(); }
 function resetGame(){ if(confirm('রিসেট করবেন?')){ localStorage.removeItem('ls_save'); window.location.reload(); } }
-function toggleSound(){ soundsOn=!soundsOn; soundBtn.textContent=soundsOn?'🔊 সাউন্ড ON':'🔇 সাউন্ড OFF'; if(soundsOn) ambient.play().catch(()=>{}); else ambient.pause(); }
+function toggleSound(){ soundsOn=!soundsOn; soundBtn.textContent = soundsOn?'🔊 সাউন্ড ON':'🔇 সাউন্ড OFF'; if(soundsOn) ambient.play().catch(()=>{}); else ambient.pause(); }
 function openCredits(){ window.open('https://www.facebook.com/ahm.habib.39','_blank'); }
+
+// fade-in targets
+function fadeInTargets(){
+  document.getElementById('cat').style.transition='opacity 0.8s';
+  document.getElementById('meter').style.transition='opacity 0.8s';
+  document.getElementById('pole').style.transition='opacity 0.8s';
+  document.getElementById('cat').style.opacity=step>=1.5?1:0;
+  document.getElementById('meter').style.opacity=step>=2?1:0;
+  document.getElementById('pole').style.opacity=step>=3?1:0;
+}
 
 startBtn.addEventListener('click',startGame);
 overlayStart.addEventListener('click',startGame);
@@ -142,33 +146,27 @@ resetBtn.addEventListener('click',resetGame);
 soundBtn.addEventListener('click',toggleSound);
 creditsBtn.addEventListener('click',openCredits);
 
-// Target clicks
-document.getElementById('fuse').addEventListener('click',(e)=>{
-  if(step!==1) return;
-  spawnSparks(e.clientX,e.clientY,20);
-  found.fuse=true; step=1.5;
-  updateVisibility(); typeHint('ফিউজ পাওয়া গেছে — বিড়াল সরান');
-});
-document.getElementById('cat').addEventListener('click',(e)=>{
-  if(step!==1.5) return;
-  spawnSparks(e.clientX,e.clientY,15);
-  found.cat=true; step=2;
-  updateVisibility(); typeHint('বিড়াল সরানো হয়েছে — মিটার চেক করুন');
-});
-document.getElementById('meter').addEventListener('click',(e)=>{
-  if(step!==2) return;
-  spawnSparks(e.clientX,e.clientY,15);
-  found.meter=true; step=3;
-  updateVisibility(); typeHint('মিটার চেক সম্পন্ন — খুঁটি তে যান');
-});
-document.getElementById('pole').addEventListener('click',(e)=>{
-  if(step!==3) return;
-  spawnSparks(e.clientX,e.clientY,20);
-  found.pole=true; step=4;
-  updateVisibility(); typeHint('ফাইনাল সম্পন্ন — বিদ্যুৎ ফিরে এসেছে!');
-  running=false; ambient.pause();
-});
+// target interactions
+function clickTarget(id,nextStep,hintText,sparks){
+  const el=document.getElementById(id);
+  el.addEventListener('click',(e)=>{
+    if(step!==nextStep-1) return;
+    spawnSparks(e.clientX,e.clientY,sparks);
+    found[id]=true; step=nextStep; typeHint(hintText); fadeInTargets();
+  });
+  el.addEventListener('touchstart',(e)=>{
+    if(step!==nextStep-1) return;
+    const t=e.touches[0]; const rect=el.getBoundingClientRect();
+    spawnSparks(t.clientX,t.clientY,sparks);
+    found[id]=true; step=nextStep; typeHint(hintText); fadeInTargets();
+    e.preventDefault();
+  },{passive:false});
+}
 
+clickTarget('fuse',1.5,'ফিউজ পাওয়া গেছে — বিড়াল সরান',20);
+clickTarget('cat',2,'বিড়াল সরানো হয়েছে — মিটার চেক করুন',15);
+clickTarget('meter',3,'মিটার চেক সম্পন্ন — খুঁটি তে যান',15);
+clickTarget('pole',4,'ফাইনাল সম্পন্ন — বিদ্যুৎ ফিরে এসেছে!',20);
 </script>
 </body>
 </html>
