--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>লোডশেডিং রিকভারি - Ultra Mobile Friendly</title>
+<title>লোডশেডিং রিকভারি </title>
 <style>
   body, html { margin:0; padding:0; height:100%; font-family:sans-serif; background:#071126; overflow:hidden; }
   .container { display:flex; flex-direction:row; height:100%; width:100%; }
